--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ngx-stripe",
-    "version": "7.0.0-rc.0",
+    "version": "7.0.0-rc.1",
     "description": "Angular 2+ wrapper for StripeJS",
     "main": "./bundles/ngx-stripe.umd.js",
     "module": "./modules/ngx-stripe.es5.js",
@@ -34,43 +34,48 @@
         "@angular/core": "^6.0.0-rc.1"
     },
     "devDependencies": {
-        "@angular/animations": "^6.0.0-rc.1",
-        "@angular/common": "^6.0.0-rc.1",
-        "@angular/compiler": "^6.0.0-rc.1",
-        "@angular/compiler-cli": "^6.0.0-rc.1",
-        "@angular/core": "^6.0.0-rc.1",
-        "@angular/platform-browser": "^6.0.0-rc.1",
-        "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
-        "@angular/platform-server": "^6.0.0-rc.1",
+        "@angular/animations": "^7.1.4",
+        "@angular/common": "^7.1.4",
+        "@angular/compiler": "^7.1.4",
+        "@angular/compiler-cli": "^7.1.4",
+        "@angular/core": "^7.1.4",
+        "@angular/platform-browser": "^7.1.4",
+        "@angular/platform-browser-dynamic": "^7.1.4",
+        "@angular/platform-server": "^7.1.4",
         "@compodoc/compodoc": "1.0.0-beta.10",
-        "@types/jasmine": "2.5.52",
-        "@types/node": "8.0.1",
+        "@types/jasmine": "^3.3.5",
+        "@types/node": "^10.12.18",
         "chalk": "1.1.3",
-        "codelyzer": "3.1.1",
-        "core-js": "2.4.1",
-        "jasmine-core": "2.6.4",
-        "karma": "1.7.0",
-        "karma-chrome-launcher": "2.1.1",
-        "karma-jasmine": "1.1.0",
+        "codelyzer": "^4.5.0",
+        "core-js": "^2.6.1",
+        "jasmine-core": "^3.3.0",
+        "jasmine-spec-reporter": "^4.2.1",
+        "karma": "^3.1.4",
+        "karma-chrome-launcher": "^2.2.0",
+        "karma-jasmine": "^2.0.1",
         "karma-sourcemap-loader": "0.3.7",
         "karma-spec-reporter": "0.0.31",
         "karma-webpack": "2.0.3",
+        "protractor": "^5.4.1",
         "reflect-metadata": "0.1.10",
         "rollup": "0.43.0",
         "rollup-plugin-node-resolve": "3.0.0",
-        "rxjs": "6.0.0-rc.0",
+        "rxjs": "^6.3.3",
         "shelljs": "0.7.8",
         "sorcery": "0.10.0",
         "source-map-loader": "0.2.1",
         "ts-loader": "2.1.0",
-        "tslint": "5.4.3",
-        "typescript": "2.7.2",
+        "tslint": "^5.12.0",
+        "typescript": "^3.1.6",
         "uglify-js": "2.8.29",
-        "webpack": "3.0.0",
+        "webpack": "^4.28.2",
         "yargs": "8.0.2",
-        "zone.js": "0.8.20"
+        "zone.js": "^0.8.26"
     },
     "prettier": {
         "singleQuote": true
+    },
+    "dependencies": {
+        "@angular/http": "^7.1.4"
     }
 }
