--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     ],
     "license": "MIT",
     "peerDependencies": {
-        "@angular/common": "^6.0.0-rc.1",
-        "@angular/core": "^6.0.0-rc.1"
+        "@angular/common": "^7.1.4",
+        "@angular/core": "^7.1.4"
     },
     "devDependencies": {
         "@angular/animations": "^7.1.4",
@@ -42,6 +42,7 @@
         "@angular/platform-browser": "^7.1.4",
         "@angular/platform-browser-dynamic": "^7.1.4",
         "@angular/platform-server": "^7.1.4",
+        "@angular/http": "^7.1.4",
         "@compodoc/compodoc": "1.0.0-beta.10",
         "@types/jasmine": "^3.3.5",
         "@types/node": "^10.12.18",
@@ -74,8 +75,5 @@
     },
     "prettier": {
         "singleQuote": true
-    },
-    "dependencies": {
-        "@angular/http": "^7.1.4"
     }
 }
